# cpp-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  clang-format.sh  cmake_build.sh  cmake_generate.sh  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  lib.cxx
